--- a/app/templates/artifact-category.html
+++ b/app/templates/artifact-category.html
@@ -58,7 +58,8 @@
 		    <div class="container">
 		   		<div class="row">
 					<div class="col-md-8 col-xs-8">
-						<h3>Clothing <span class="category-h3-details">Artifacts for the Hupa Tribe</span></h3>
+						{% set cName = categ_name %}
+						<h3>{{cName}} <span class="category-h3-details">Artifacts for the Hupa Tribe</span></h3>
 					</div>
 					<div class="col-md-4 col-xs-4">
 						<h4 class="text-right">{{count}} Objects Found</h4>
