--- a/app/templates/artifacts.html
+++ b/app/templates/artifacts.html
@@ -59,7 +59,8 @@
 		    <div class="container">
 		   		<div class="row">
 					<div class="col-md-8 col-xs-8">
-						<h3>All Artifacts<span class="category-h3-details">Hupa Tribe</span></h3>
+						{% set tribeName = tribe_name %}
+						<h3>All Artifacts<span class="category-h3-details">{{tribeName}}</span></h3>
 					</div>
 					<div class="col-md-4 col-xs-4">
 						<h4 class="text-right">12342 Objects Found</h4>
@@ -77,10 +78,14 @@
 		<!--
 		CAROUSEL #1
 		-->
-		<div class="container">
+			{% set linkCount = 0 %}
+			{% for categ in category_list %}
+			<div class="container">
 			<div class="row artifact-category">
 				<div class="col-md-12">
-					<a href="artifact-category.html"><h3>Category Name</h3></a><br>
+					{% set page_path = "/artifact-category.html/" + tribe_name + "/" + link_categlist[linkCount] %}
+					{% set linkCount = linkCount + 1 %}
+					<a href={{page_path}}><h3> {{categ}} </h3></a><br>
 				</div>
 			</div>
 			<div class="row">
@@ -99,50 +104,25 @@
 
 			                        	<div class="col-md-10">
 
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
+			                        		{% set arts = artifact_list[categ]%}
+			                        		{% set counter_art = 0 %}
+			                        		{% for display_art in arts %}
+			                        			{% if counter_art < 4 %}
+						                            <div class="col-sm-3 col-xs-6">
+														<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
+															<span class="glyphicon glyphicon-briefcase"></span>
+															<span class="satchel-btn-txt">Add +</span>
+														</a>
+														<div class="thumbnail-container">
+															<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
+																{% set source2 = "https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/"+display_art["blob_ss"][0]+"/derivatives/Medium/content" %}
+																<img class="artifact-thumb" src={{source2}} alt="..." />
+															</a>
+														</div>
+						                            </div>
+						                         {% set counter_art = counter_art + 1 %}
+						                        {% endif %}
+					                         {% endfor %} 
 
 				                       	</div>
 
@@ -303,229 +283,7 @@
 				<hr/>
 			</div>
 		</div>
-
-		<!--
-		CAROUSEL #2
-		-->
-		<div class="container">
-			<div class="row artifact-category">
-				<div class="col-md-12">
-					<a href="artifact-category.html"><h3>Category Name</h3></a><br>
-				</div>
-			</div>
-			<div class="row">
-			    <div class="col-md-12">
-
-			        <div class="well-none">
-			            <div id="carousel-2" class="carousel slide">
-			                
-			                <!-- Carousel items -->
-			                <div class="carousel-inner">
-			                    <div class="item active">
-
-			                        <div class="row">
-			                        	<div class="col-md-1">
-			                        	</div>
-
-			                        	<div class="col-md-10">
-
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-
-				                       	</div>
-
-										<div class="col-md-1">
-			                        	</div>
-
-			                        </div>
-			                        <!--/row-->
-
-			                    </div>
-			                    <!--/item-->
-			                    <div class="item">
-
-			                        <div class="row">
-			                        	<div class="col-md-1">
-			                        	</div>
-
-			                        	<div class="col-md-10">
-
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-
-				                       	</div>
-
-										<div class="col-md-1">
-			                        	</div>
-
-			                        </div>
-			                        <!--/row-->
-			                        
-			                    </div>
-			                    <!--/item-->
-			                    <div class="item">
-
-			                        <div class="row">
-			                        	<div class="col-md-1">
-			                        	</div>
-
-			                        	<div class="col-md-10">
-
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-				                            <div class="col-sm-3 col-xs-6">
-												<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-													<span class="glyphicon glyphicon-briefcase"></span>
-													<span class="satchel-btn-txt">Add +</span>
-												</a>
-												<div class="thumbnail-container">
-													<a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-														<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-													</a>
-												</div>
-				                            </div>
-
-				                       	</div>
-
-										<div class="col-md-1">
-			                        	</div>
-
-			                        </div>
-			                        <!--/row-->
-			                        
-			                    </div>
-			                    <!--/item-->
-			                </div>
-			                <!--/carousel-inner--> 
-			                <a class="left carousel-control" href="#carousel-2" data-slide="prev">
-			                	<span class="glyphicon glyphicon-chevron-left chevron"></span>
-			                </a>
-
-			                <a class="right carousel-control" href="#carousel-2" data-slide="next">
-			                	<span class="glyphicon glyphicon-chevron-right chevron"></span>
-			                </a>
-			            </div>
-			            <!--/myCarousel-->
-			        </div>
-			        <!--/well-->
-			    </div>
-			 </div> <!-- /row -->
-		</div>
+			{% endfor %}
 
 		<br/><br/> <!-- meh sloppy fix later -->
 
@@ -572,12 +330,7 @@
 
 				$('#carousel-2').carousel({
 				interval: 0
-				})
-
-			    $('#carousel-1').on('slid.bs.carousel', function() {
-			    	//alert("slid");
-				});
-			    
+				})	    
 			    
 			});
 		</script>
