--- a/app/templates/artifacts.html
+++ b/app/templates/artifacts.html
@@ -83,7 +83,7 @@
 			<div class="container">
 			<div class="row artifact-category">
 				<div class="col-md-12">
-					{% set page_path = "/artifact-category.html/" + tribe_name + "/" + link_categlist[linkCount] %}
+					{% set page_path = "/artifact-category.html/" + link_tribename + "/" + link_categlist[linkCount] %}
 					{% set linkCount = linkCount + 1 %}
 					<a href={{page_path}}><h3> {{categ}} </h3></a><br>
 				</div>
