--- a/app/templates/artifact-category.html
+++ b/app/templates/artifact-category.html
@@ -45,7 +45,7 @@
 				        	</a>
 				        </li>
 				        <li class="nav-satchel">
-			            	<a href="satchel.html" class="btn-satchel">
+			            	<a href="/satchel.html" class="btn-satchel">
 				            	<span class="glyphicon glyphicon-briefcase"></span>&nbsp;&nbsp;My Satchel
 				            </a>
 				        </li>
