--- a/app/templates/landingpage.html
+++ b/app/templates/landingpage.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>YAPI KAPI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p><span>Brought to you by </span><a href="http://hearstmuseum.berkeley.edu/">PHOEBE A. HEARST MUSEUM OF ANTHROPOLOGY</a></p>
+              <p><a href="/about.html">ABOUT YAPI KAPI</a></p>
             </div>
           </div>
 
