--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,10 +5,10 @@
 		<title>Hack the Hearst - I School Edition</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="css/homepage.css" type="text/css" rel="stylesheet"/>
-		<link href="css/bytribe.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/homepage.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/bytribe.css" type="text/css" rel="stylesheet"/>
 		<link rel="icon" 
 	      type="image/png" 
 	      href="http://i.imgur.com/5HiRIEr.png">
@@ -51,7 +51,7 @@
 		            	<span class="icon-bar"></span>
 		            	<span class="icon-bar"></span>
 	          		</button>
-	          		<a class="navbar-brand" href="#"><img class="navlogo" src="LandingImages/YAPIKAPI_nav_logo.png"></a>
+	          		<a class="navbar-brand" href="#"><img class="navlogo" src="/static/LandingImages/YAPIKAPI_nav_logo.png"></a>
 	        	</div>
 	        	<div class="navbar-collapse collapse">
 	          		<ul class="nav navbar-nav navbar-right">
@@ -75,7 +75,7 @@
 	    			&nbsp;
 				</div>
 				<div class="col-md-8">
-					<center><img src="about.png"></center><br><hr>
+					<center><img src="http://i.imgur.com/J4ACdy2.png"></center><br><hr>
 
 						<p class="about"><strong>Yapi Kapi</strong> translates to <i>remember your story</i> in the language of the Lakota Tribe of North Dakota.</p> 
 
@@ -135,6 +135,6 @@
 
 		<!-- Introduce Bootstrap JS at the bottom -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
 	</body>
 </html>
